Test with single call

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ management..server.add-application-context-header=false
 management.endpoints.enabled-by-default=true
 endpoints.health.enable=true
 endpoint.sensitive=true
+
+api.jokes.endpoint=http://api.icndb.com/jokes/random?bridgeEndpoint=true
