update pom to deploy on openshift

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -32,3 +32,5 @@ endpoint.sensitive=true
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 spring.http.log-request-details=true
+
+api.jokes.endpoint=http://api.icndb.com/jokes/random?bridgeEndpoint=true
